Fixed header overlap issue in regalia page

--- a/style.css
+++ b/style.css
@@ -1319,11 +1319,13 @@ h2 {
     color: #555;
   }
   @media (max-width: 768px) {
-      
+       body{
+    margin-top: 120px;
+  } 
     .hero{
       padding: 140px 0 100px;
     }
-      /* .hero-content h1 {
+      .hero-content h1 {
           font-size: 2rem;
       }
 
@@ -1333,7 +1335,7 @@ h2 {
 
       .about-grid {
           grid-template-columns: 1fr;
-      } */
+      }
 
   }
 
